k8s/proxmox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: proxmox
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`proxmox.yadon3141.com`)
      kind: Rule
      services:
        - name: proxmox-api
          port: 8006
          scheme: https
          serversTransport: proxmox-api
      middlewares:
        - name: authelia-auth
          namespace: authelia
        - name: proxmox-retry
